# python-template-repo

./: .gitignore  LICENSE  README.md  setup.cfg
