[metadata]
name = PACKAGE-NAME-HERE
version = 0.0.1.
author = PACKAGE-AUTHOR-HERE
author_email = PACKAGE-AUTHOR-EMAIL-HERE
description = DESCRIPTION-HERE
long_description = file: README.md
long_description_content_type = text/markdown
url = GITHUB-URL-HERE
project_urls =
    Bug Tracker = GITHUB-ISSUE-TRACKER-URL-HERE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
        
[options.packages.find]
where = src
